
  ((RabbitClusterMQ)Dew.cluster.mq).publish(String topic, String message, boolean confirm)
  ((RabbitClusterMQ)Dew.cluster.mq).request(String address, String message, boolean confirm)

* [功能]支持 `EnabledColumn` 结果反转，EnabledColumn用于标识是否启用状态的注解，默认是true是否用，false是禁用，但有些情况下状态字段会使用`del_flag`表示是否删除，这时需要设置结果反转
* [功能]统一Body及Url Path/Query的异常捕获
* [测试]引入 `embedded redis` 以支持单元测试
* [文档]添加 以宠物商店为例的 `新手入门` 章节

==== Fixed

* 修正jacoco单元测试覆盖率偏少的问题

=== 1.0.0-beta5

==== Feature

* 添加服务调用限制（可定义A服务不允许B服务调用，防止服务双向依赖） e.g.

 dew.security.exclude-services:
  - serviceB
  - serviceC

* 添加对Thrift的支持
* 支持集群Leader Election（非严格模式）
* 整合Spring Boot Cache

==== Improvement

* 优化CURD脚手架
* 支持UUID形式的主键
* 优化注解自定义查询（ `@Select` ），通过测试
* 支持自定义异常配置，见 `异常处理` 章节
* 添加Bean分组校验说明，见 `异常处理` 章节
* 添加 `Sonar` 代码质量检查，配置 `sonar.host.url` 执行 `mvn clean verify sonar:sonar`
* 【需要迁移】使用Druid数据库连接池（注意数据库连接配置变更）
* 【需要迁移】删除 `DaoImpl` 兼容性类
* 【需要迁移】将 `Dew.e` 移到 `Dew.E.e`，添加 `Dew.E.checkXX`异常检查方法，见 `异常处理` 章节

==== Fixed

* 修正事务失败，重试成功后还是被回滚的问题

=== 1.0.0-beta4

==== Feature

* 整合 `Spring boot admin` 与 `Turbine`，可直观的监控各个性能及访问指标

image::./images/spring-boot-admin.png[]

* 添加实验功能：使用注解自定义查询（ `@Select` ）

==== Improvement

* 添加了几个自定义验证方式
* 添加性能测试报告
* 移除 `DaoImpl` ，改用接口 `DewDao` 

WARNING: 为确保兼容， `DaoImpl` 在这一版本中未物理移除，如有条件请迁移至 `DewDao` 

==== Fixed

=== 1.0.0-beta3

==== Feature

. Cluster的MQ添加RabbitMQ SPI

==== Improvement

. 支持自定义http错误码( `Dew.e(String code, E ex, StandardCode customHttpCode)` )
. 对加了字段校验(@Valid)的对象，如果检验失败会返回错误详细
. 开放将ResultSet转成对象的方法( `ds.convertRsToObj(Map<String, Object> rs, Class<E> entityClazz)` )

==== Fixed

=== 1.0.0-Beta2

==== Feature

. 支持生成Html及PDF版本的离线文档

==== Improvement

. 添加Dubbo整合示例，提供Dubbo服务提供无法处理`声明式事务`的方案
. 完善文档并改用asciidoc格式
. 统一依赖管理
. `parent` 中添加公司maven库
. Hazelcast Client升级到3.8.2
. Dew-Common升级到1.3.7

==== Fixed

=== 1.0.0-beta1

==== Feature

. 多数据源支持，详见说明文档`多数据源支持`章节

IMPORTANT: 原`Dew.ds.xx`接口弃用，改为`Dew.ds().xx`，如需要使用其它数据源请使用`Dew.ds(&lt;DS Name&gt;).xx`

==== Improvement
