@@ -22,5 +22,5 @@ dew:
       basePackage: your.group.controller # API文档路径
   cluster:
     cache: redis # 指定集群缓存实现为redis
-  dao:
-    basePackage: your.group.dao
+  jdbc:
+    base-packages: ["your.group.jdbc"]
