@@ -17,6 +17,7 @@
 * [功能]统一Body及Url Path/Query的异常捕获
 * [测试]引入 `embedded redis` 以支持单元测试
 * [文档]添加 以宠物商店为例的 `新手入门` 章节
+* [修改]原 `dew.dao.base-package` 改成 `dew.jdbc.base-packages` 支持多个路径
 
 ==== Fixed
 
